--- a/FreeCodeCamp-Calculator/sass/_type.sass
+++ b/FreeCodeCamp-Calculator/sass/_type.sass
@@ -27,5 +27,6 @@ p
 
 // Warning Text
 .answer.warning
-	font-size:		15.5px
-	padding-top:	3px
+	font-family:	'Coverface SE Bold', sans-serif
+	font-size:		14px
+	padding-top:	4px
